<resources>
    <string name="app_name">Eventus UPT</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_explore">Explorar</string>
    <string name="menu_qr">QR</string>
    <string name="menu_event">Eventos</string>
    <string name="menu_profile">Perfil</string>

    <!-- login text -->
    <string name="login_welcome">Bienvenidos</string>
    <string name="login_welcome_description">Inicie sesión con su información personal por correo electrónico y contraseña</string>
    <string name="login_username">Correo eléctronico</string>
    <string name="login_password">Contraseña</string>
    <string name="login_button_login">Iniciar Sesión</string>
    <string name="login_txtbutton_register">REGISTRATE</string>
    <string name="login_txtmid_register">o ingresa como</string>
    <string name="login_txtbutton_login_organizer">ORGANIZADOR</string>

    <!-- login Organizer text -->
    <string name="loginOrganizer_welcome">Bienvenido Organizador</string>
    <string name="loginOrganizer_welcome_description">Inicie sesión con su información personal utilizando su correo educacional</string>
    <string name="loginOrganizer_username">Correo eléctronico</string>
    <string name="loginOrganizer_password">Contraseña</string>
    <string name="loginOrganizer_button_login">Iniciar Sesión</string>
    <string name="loginOrganizer_txtmid_login">Soy usuario</string>
    <string name="loginOrganizer_txtbutton_back">ASISTENTE</string>

    <!-- Register text -->
    <string name="register_welcome">Registro</string>
    <string name="register_welcome_description">Llene todos los campos con su información personal para completar su registro</string>
    <string name="register_name">Nombres</string>
    <string name="register_lastname">Apellidos</string>
    <string name="register_phone">Celular</string>
    <string name="register_email">Correo eléctronico</string>
    <string name="register_password">Contraseña</string>
    <string name="register_button_finish">Terminar Registro</string>
    <string name="register_button_cancel">Cancelar</string>

    <!-- event text -->
    <string name="event_provider">Dirección de Educación Continua</string>
    <string name="event_title">Charla virtual: Talleres de apoyo a tesis para optar al título profesional en Ingeniería Industrial 2020-1</string>
    <string name="event_date">Jueves 18 de junio | 9:30 - 10:30 am</string>
    <string name="event_image_description">Event</string>

    <!-- event type text -->
    <string name="event_type_name">Académico</string>

    <!-- qr text -->
    <string name="qr_message_title">Escanear código QR</string>
    <string name="qr_message_description">Apunta su cámara hacia el código QR para ver la información del evento</string>
    <string name="qr_image_description">Escanear Evento</string>
    <string name="qr_button_scan">Escanear</string>

    <!-- qr Organizer text -->
    <string name="qr_organizer_message_title">Escanear código QR</string>
    <string name="qr_organizer_message_description">Apunta su cámara hacia el código QR para marcar la asistencia del invitado</string>
    <string name="qr_organizer_image_description">Escanear Evento</string>
    <string name="qr_organizer_button_scan">Escanear</string>

    <!-- my event text -->
    <string name="my_event_title">Charla virtual: Talleres de apoyo a tesis para optar al título profesional en Ingeniería Industrial 2020-1</string>
    <string name="my_event_image_description">My Event</string>
    <string name="my_event_date">Jueves 18 de junio | 9:30 - 10:30 am</string>

    <!-- profile text -->
    <string name="profile_avatar_description">Avatar</string>
    <string name="profile_user_name">Elard Roma</string>
    <string name="profile_user_email">elardroma@upt.pe</string>
    <string name="profile_logout_text">Cerrar Sesión</string>

    <!-- profile Organizer text -->
    <string name="profile_organizer_textbutton_edit">Editar</string>
    <string name="profile_organizer_avatar_description">Avatar</string>

    <string name="profile_organizer_text_name">Nombres:</string>
    <string name="profile_organizer_text_acronym">Acrónimo:</string>
    <string name="profile_organizer_text_phone">Celular:</string>
    <string name="profile_organizer_text_website">Sitio Web:</string>
    <string name="profile_organizer_text_facebook">Facebook:</string>
    <string name="profile_organizer_text_email">Correo Electrónico:</string>
    <string name="profile_organizer_text_status">Estado:</string>
    <!-- DATOS TEMPORALES -->
    <string name="profile_organizer_name">Elard Ricardo</string>
    <string name="profile_organizer_acronym">ERRR</string>
    <string name="profile_organizer_phone">947856236</string>
    <string name="profile_organizer_website">www.elardroma.com.pe</string>
    <string name="profile_organizer_facebook">www.facebook.com/elard.ricardo</string>
    <string name="profile_organizer_email">elardroma@upt.pe</string>
    <string name="profile_organizer_status">Activo</string>

    <string name="profile_organizer_logout_text">Cerrar Sesión</string>
    <string name="organizer_edit_save">Guardar cambios</string>
    <string name="organizer_change_password">Cambiar mi contraseña</string>

    <!-- Event text -->
    <string name="create_event_title">Titulo:</string>
    <string name="create_event_description">Descripción:</string>
    <string name="create_event_date">Fecha:</string>
    <string name="create_event_image">Imagen:</string>
    <string name="create_event_starttime">Hora Inicio:</string>
    <string name="create_event_endtime">Hora Fin:</string>
    <string name="create_event_format">Formato:</string>
    <string name="create_event_status">Estado:</string>
    <string name="create_event_address">Dirección/URL:</string>
    <string name="create_event_type">Tipo de Evento:</string>
    <string name="create_event_faculty">Facultad:</string>
    <string name="create_event_school">Escuela:</string>

    <string name="create_event_button_image">Adjuntar</string>
    <string name="create_event_button_create">Crear Evento</string>

    <string-array name="create_event_format">
        <item>Virtual</item>
        <item>Presencial</item>
    </string-array>

    <string-array name="create_event_status">
        <item>Activo</item>
        <item>Inactivo</item>
    </string-array>

    <string-array name="create_event_type">
        <item>Académico</item>
        <item>Atletismo</item>
        <item>Ceremonia</item>
        <item>Conferencia</item>
        <item>Exposición</item>
        <item>Sesion de informacion</item>
        <item>Conferencias y seminarios</item>
        <item>Reunión</item>
        <item>Actuación</item>
        <item>Evento especial</item>
        <item>Actividad estudiantil</item>
        <item>Taller</item>
    </string-array>

    <string-array name="create_event_faculty">
        <item>FAING</item>
        <item>FAEDCOH</item>
        <item>FADE</item>
        <item>FACSA</item>
        <item>FACEM</item>
        <item>FAU</item>
    </string-array>

    <string-array name="create_event_faing_school">
        <item>EPIC</item>
        <item>EPIS</item>
        <item>EPIE</item>
        <item>EPIA</item>
        <item>EPIAM</item>
        <item>EPII</item>
    </string-array>

    <string-array name="create_event_faedcoh_school">
        <item>EPE</item>
        <item>EPCC</item>
        <item>EPHP</item>
    </string-array>

    <string-array name="create_event_fade_school">
        <item>EPD</item>
    </string-array>

    <string-array name="create_event_facsa_school">
        <item>EPMH</item>
        <item>EPO</item>
        <item>EPTM</item>
    </string-array>

    <string-array name="create_event_facem_school">
        <item>EPATH</item>
        <item>EPANI</item>
        <item>EPCCF</item>
        <item>EPICO</item>
        <item>EPEM</item>
        <item>EPIPA</item>
    </string-array>

    <string-array name="create_event_fau_school">
        <item>EPA</item>
        <item>EPDG</item>
        <item>EPDP</item>
    </string-array>

    <!-- Event hint text -->
    <string name="create_event_hint_title">Ingrese el titulo del evento</string>
    <string name="create_event_hint_description">Ingrese la descripcion del evento</string>
    <string name="create_event_hint_date">Fecha</string>
    <string name="create_event_hint_starttime">Hora Inicio</string>
    <string name="create_event_hint_endtime">Hora Fin</string>
    <string name="create_event_hint_format">Formato</string>
    <string name="create_event_hint_status">Estado</string>
    <string name="create_event_hint_address">Ingrese la dirección/URL</string>
    <string name="create_event_hint_type">Tipo</string>
    <string name="create_event_hint_school">Escuela</string>
    <string name="create_event_hint_URLImage">Ingrese aqui la URL de la imagen</string>

    <!-- User profile hint text -->
    <string name="profile_user_textbutton_edit">Editar</string>
    <string name="profile_user_text_name">Nombres:</string>
    <string name="profile_user_text_phone">Telefono:</string>
    <string name="profile_user_phone">952607080</string>
    <string name="profile_user_text_lastname">Apellidos:</string>
    <string name="profile_user_lastname">Roma Rodriguez</string>
    <string name="profile_user_status">Activo</string>
    <string name="profile_user_text_status">Estado:</string>
    <string name="profile_user_text_email">Correo Electrónico:</string>
    <string name="user_change_password">Cambiar contraseña</string>
    <string name="user_edit_save">Guardar cambios</string>

    <!-- Alert dialog options -->
    <string name="yes">Si</string>
    <string name="no">No</string>

    <!-- Event detail buttons -->
    <string name="detail_event_button_participate">Participar</string>
    <string name="detail_event_button_check">Marcar Asistencia</string>
    <string name="event_organizer_participants">Ver participantes</string>

    <!-- Participants event -->
    <string name="participants_name">Nombres y Apellidos</string>
    <string name="participants_assitant">Asistencia</string>
    <string name="participants_assitant_time">Hora</string>

</resources>

