<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayLight"
    tools:context=".CreateEventActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/create_event_title"
                android:fontFamily="sans-serif"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingBottom="5dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_event_edt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@drawable/style_border_editext"
                android:hint="@string/create_event_hint_title"
                android:maxLines="1"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/create_event_description"
                android:fontFamily="sans-serif"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingBottom="5dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_event_edt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:background="@drawable/style_border_editext"
                android:hint="@string/create_event_hint_description"
                android:maxLines="5"/>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/create_event_date"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:paddingBottom="5dp"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_event_edt_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:focusable="false"
                        android:clickable="false"
                        android:background="@drawable/style_border_editext"
                        android:hint="@string/create_event_hint_date"
                        android:maxLines="1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/create_event_image"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:paddingBottom="5dp"/>

                    <Button
                        android:id="@+id/create_evento_button_image"
                        android:textSize="12sp"
                        android:text="@string/create_event_button_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/create_event_starttime"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:paddingBottom="5dp"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_event_edt_starttime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="time"
                        android:focusable="false"
                        android:clickable="false"
                        android:background="@drawable/style_border_editext"
                        android:hint="@string/create_event_hint_starttime"
                        android:maxLines="1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/create_event_endtime"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:paddingBottom="5dp"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_event_edt_endtime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="time"
                        android:focusable="false"
                        android:clickable="false"
                        android:background="@drawable/style_border_editext"
                        android:hint="@string/create_event_hint_endtime"
                        android:maxLines="1"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/create_event_format"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:paddingBottom="5dp"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_event_edt_format"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:background="@drawable/style_border_editext"
                        android:hint="@string/create_event_hint_format"
                        android:maxLines="1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/create_event_status"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:paddingBottom="5dp"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_event_edt_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:background="@drawable/style_border_editext"
                        android:hint="@string/create_event_hint_status"
                        android:maxLines="1"/>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/create_event_address"
                android:fontFamily="sans-serif"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingBottom="5dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_event_edt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@drawable/style_border_editext"
                android:hint="@string/create_event_hint_address"
                android:maxLines="1"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/create_event_type"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:paddingBottom="5dp"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_event_edt_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:background="@drawable/style_border_editext"
                        android:hint="@string/create_event_hint_type"
                        android:maxLines="1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/create_event_school"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:paddingBottom="5dp"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_event_edt_school"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:background="@drawable/style_border_editext"
                        android:hint="@string/create_event_hint_school"
                        android:maxLines="1"/>
                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/create_evento_button_create"
                android:text="@string/create_event_button_create"/>
            <Button
                android:id="@+id/create_event_button_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?attr/materialButtonOutlinedStyle"
                android:text="@string/register_button_cancel" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>